# AI-Powered-Customer-Knowledge-Assistant-for-Digital-Automotive-Channels

./: .gitignore  BMW_get_started.command  INSTRUCTIONS.md  README.md  main.py  pyproject.toml  requirements.txt
data/knowledge_base/: doc_01_vehicle_features.txt  doc_02_service_maintenance.txt  doc_03_warranty.txt  doc_04_ordering_process.txt  doc_05_electric_vehicles.txt  doc_06_customer_support.txt
helper_function/: prints.py
src/: app.py  config.py
src/analytics/: tracking.py
src/embeddings/: bge_m3.py  test_embedding.py
src/llm/: chat_backend.py  test_llm.py
src/rag/: chain.py  ingest.py  test_chain.py
src/vectorstore/: chroma_store.py
